completed main view

--- a/WeatherApp/app/src/main/res/layout/layout_group_list.xml
+++ b/WeatherApp/app/src/main/res/layout/layout_group_list.xml
@@ -3,43 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:paddingTop="5dp"
+    android:background="#00000000">
 
 
     <TextView
-        android:text="Today"
+        android:layout_marginLeft="5dp"
+        android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/day"
-        android:textSize="15sp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:padding="10px"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/ic_sun"
-        android:id="@+id/weather"
-        />
-    <TextView
-        android:text="32℃/20℃"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/temperature"
-        android:textSize="15sp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:padding="10px"/>
+        android:padding="10px"
+        android:text="Today"
+        android:textSize="15sp"
+        android:textColor="@color/white"/>
+
+    <ImageView
+        android:id="@+id/weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/ic_sun"
+        android:layout_marginBottom="5dp"/>
+
+    <TextView
+        android:id="@+id/temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:padding="10px"
+        android:text="32℃/20℃"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:layout_marginRight="5dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="#FFF"/>
+
     <!--<ImageView-->
-        <!--android:id="@+id/expand_img"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:contentDescription="arrow"/>-->
+    <!--android:id="@+id/expand_img"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:contentDescription="arrow"/>-->
+
 </RelativeLayout>
