--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MainActivity"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
-    android:background="@drawable/main_background">
+    android:orientation="vertical"
+    tools:context=".Activity.MainActivity">
 
     <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawerLayout">
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:fitsSystemWindows="true">
+
+            <com.flaviofaria.kenburnsview.KenBurnsView
+                android:id="@+id/kbv_img_bg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ha_noi_1" />
 
             <include
                 android:id="@+id/toolbar"
@@ -25,9 +31,10 @@
             <FrameLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_below="@+id/toolbar" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <fragment
             android:id="@+id/navigation_drawer"
