--- a/WeatherApp/app/src/main/res/layout/layout_item_list.xml
+++ b/WeatherApp/app/src/main/res/layout/layout_item_list.xml
@@ -1,69 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:background="#e0e0e0">
+    android:background="#00000000"
+    android:layout_marginBottom="2dp">
 
     <LinearLayout
+        android:id="@+id/layout_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="15dp">
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="RealFeel:"
                 android:id="@+id/realfeel"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="32℃"
                 android:layout_toRightOf="@+id/realfeel"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Winds:"
                 android:id="@+id/wind"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="7 km/h SE"
                 android:layout_toRightOf="@+id/wind"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Gusts:"
                 android:id="@+id/gust"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="13 km/h"
                 android:layout_toRightOf="@+id/gust"
                 android:layout_marginLeft="10dp"/>
@@ -71,19 +81,22 @@
 
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Cloud Cover:"
                 android:id="@+id/cloud"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="46%"
                 android:layout_toRightOf="@+id/cloud"
                 android:layout_marginLeft="10dp"/>
@@ -91,19 +104,22 @@
 
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="UV index:"
                 android:id="@+id/uv"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="1"
                 android:layout_toRightOf="@+id/uv"
                 android:layout_marginLeft="10dp"/>
@@ -111,63 +127,74 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_toRightOf="@+id/layout_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="60dp">
+        android:layout_marginLeft="60dp"
+        android:layout_marginBottom="5dp">
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Rain:"
                 android:id="@+id/rain"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="0 mm"
                 android:layout_toRightOf="@+id/rain"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Snow:"
                 android:id="@+id/snow"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="0 cm"
                 android:layout_toRightOf="@+id/snow"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Ice"
                 android:id="@+id/ice"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="0 mm"
                 android:layout_toRightOf="@+id/ice"
                 android:layout_marginLeft="10dp"/>
@@ -175,19 +202,22 @@
 
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Visibility:"
                 android:id="@+id/visibility"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="15 km"
                 android:layout_toRightOf="@+id/visibility"
                 android:layout_marginLeft="10dp"/>
@@ -195,22 +225,32 @@
 
 
         <RelativeLayout
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
+                android:textSize="14sp"
+                android:textColor="@color/white"
                 android:text="Ceiling:"
                 android:id="@+id/ceiling"
                 android:layout_alignParentTop="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:textSize="13sp"
+                android:textColor="@color/white"
                 android:text="9144 m"
                 android:layout_toRightOf="@+id/ceiling"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="#BDBDBD"/>
+
+</RelativeLayout>
