--- a/WeatherApp/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_navigation"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
+        android:id="@+id/layout_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -13,22 +15,48 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="Version 1.0.0"
-            android:textColor="@color/black"
-            android:id="@+id/textView2"
-            android:layout_weight="1" />
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/navigation_item_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@drawable/drawer_selector_item">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical|left"
+                android:layout_marginLeft="10dp"
+                app:srcCompat="@drawable/ic_setting" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Sign In"
+                android:textColor="#444444"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/navigation_item_location"
@@ -38,10 +66,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_marker"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_marker" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -56,14 +84,41 @@
             <ImageView
                 android:id="@+id/img_expand"
                 android:layout_width="12dp"
+                android:layout_height="12dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginRight="14dp"
-                app:srcCompat="@drawable/ic_arrow_up"
-                android:layout_height="12dp" />
+                app:srcCompat="@drawable/ic_arrow_up" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/navigation_item_position"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@drawable/drawer_selector_item"
+            android:visibility="gone">
+
+
+            <TextView
+                fontPath="fonts/UTM AvoBold.ttf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="40dp"
+                android:layout_weight="1"
+                android:text="Hanoi"
+                android:textColor="#444444"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical|left"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/ic_position" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/navigation_item_position_2"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/drawer_selector_item"
@@ -76,16 +131,16 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="40dp"
                 android:layout_weight="1"
-                android:text="Hanoi"
+                android:text="Arab"
                 android:textColor="#444444"
                 android:textSize="15sp" />
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginRight="10dp"
-                app:srcCompat="@drawable/ic_position"
-                android:layout_height="20dp" />
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -96,10 +151,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_map"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_map" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -121,10 +176,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_setting"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_setting" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -138,6 +193,30 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/navigation_item_news"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@drawable/drawer_selector_item">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical|left"
+                android:layout_marginLeft="10dp"
+                app:srcCompat="@drawable/ic_setting" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Weather News"
+                android:textColor="#444444"
+                android:textSize="15sp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/navigation_item_community"
@@ -147,10 +226,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_facebook"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_facebook" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -172,10 +251,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_share"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_share" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -197,10 +276,10 @@
 
             <ImageView
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
-                app:srcCompat="@drawable/ic_star"
-                android:layout_height="20dp" />
+                app:srcCompat="@drawable/ic_star" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -213,7 +292,6 @@
                 android:textSize="15sp" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
